[Refactor] 포트폴리오 삭제 및 hedgehome조회 변경 (#99)
* [Refactor] 포트폴리오 삭제 api requestbody형식으로 변경

* [Refactor] 최상위 6개는 호출 나머지는 기타로 묶도록 변경